# multiscale_mixture

./: .clang-format  .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/ClassicalHCMM/: Braeu_cylinder_test.cpp  CMakeLists.txt  Latorre_cylinder_test.cpp  Maes_cube_test_cauchy_stress.cpp  Maes_cube_test_dirichletBC.cpp  Maes_cylinder_test.cpp
apps/CoupledHCMM/: CMakeLists.txt  Latorre_coupled_cylinder_test.cpp  Latorre_coupled_cylinder_test_simple_pathways.cpp  Latorre_coupled_cylinder_test_split_EC.cpp  Latorre_coupled_cylinder_test_split_EC_active_stress.cpp
apps/Prestretching/: Braeu_cylinder_test_prestretch.cpp  CMakeLists.txt  Latorre_cylinder_test_prestretch.cpp  Latorre_cylinder_test_prestretch_incl_active_stress.cpp  Maes_cube_test_prestretch_cauchy_stress.cpp  Maes_cylinder_test_prestretch.cpp
include/MSHCMM/common/: BoundaryConditionFunctions.h  boundary_descriptor.h  fe_data.h
include/MSHCMM/diffusion/: diffusion_manager.h  diffusion_parameters.h  diffusion_parameters_constant.h  diffusion_parameters_pathway.h  iteration_tracker.h  local_diffusion_parameters.h
include/MSHCMM/mixture/constituents/: constituent_base.h  constituent_factory_base.h  constituent_fiber.h  constituent_fiber_factory.h  constituent_hyperelastic.h  constituent_hyperelastic_factory.h  cylindrical_coordinate_transformer.h  transferable_parameters.h
include/MSHCMM/mixture/growth_and_remodeling/: local_mixture.h  mixture_G&R.h  postprocessing_functions.h  postprocessor.h
include/MSHCMM/mixture/growth_strategies/: growth_strategy_anisotropic.h  growth_strategy_anisotropic_radial.h  growth_strategy_base.h  growth_strategy_isotropic.h  growth_strategy_penalty.h
include/MSHCMM/mixture/materials/: fiber_material_1D.h  fiber_material_base.h  material_base.h  neo_hooke_compressible.h
include/MSHCMM/mixture/prestretch_strategies/: prestretch_strategy_base.h  prestretch_strategy_famaey.h  prestretch_strategy_mousavi.h  prestretch_strategy_none.h
include/MSHCMM/mixture/solver/: LinearSolver.h  SystemState.h  errors.h
include/MSHCMM/models/: fully_coupled_model_arkode.h
include/MSHCMM/pathways/: endothelial_cell_layer.h  id_distributions.h  pathway_manager.h  pathway_output.h  pathway_storage.h
include/MSHCMM/pathways/cells/: cell.h  cell_state.h  cell_traits.h  cell_types.h  local_cell_collection.h
include/MSHCMM/pathways/equations/: Irons2020_EC_pathway_extracted.h  Irons2020_SMC_pathway_extracted.h  equation_helpers.h  pathway_Irons2020.h  pathway_equation_base.h  simple_pathway_2_outputs.h
include/MSHCMM/utilities/: helpers.h  scalers.h
src/diffusion/: diffusion_manager.cpp
src/mixture/: constituent_fiber.cpp  constituent_fiber_factory.cpp  constituent_hyperelastic.cpp  constituent_hyperelastic_factory.cpp  local_mixture.cpp  mixture_G&R.cpp  postprocessor.cpp
src/models/: fully_coupled_model_arkode.cpp
src/pathways/: cell.cpp  endothelial_cell_layer.cpp  id_distributions.cpp  local_cell_collection.cpp  pathway_manager.cpp  pathway_output.cpp  pathway_storage.cpp
